[package]
name = "active-lock"
version = "0.1.0"
edition = "2021"
description = "Cross-platform screen locker that overlays all monitors without triggering OS sleep"
license = "MIT"

[dependencies]
winit = "0.30"
softbuffer = "0.4"
tiny-skia = "0.11"
bcrypt = "0.16"
ctrlc = "3.4"
log = "0.4"
env_logger = "0.11"
rpassword = "7"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_LibraryLoader",
    "Win32_Foundation",
    "Win32_System_Registry",
    "Win32_UI_Input_KeyboardAndMouse",
] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
block2 = "0.6"
objc2-app-kit = { version = "0.3", features = [
    "NSApplication",
    "NSScreen",
    "NSWindow",
    "NSView",
    "NSEvent",
    "NSRunningApplication",
    "NSGraphicsContext",
    "NSResponder",
] }
objc2-foundation = { version = "0.3", features = ["NSGeometry", "NSArray", "NSString", "NSDictionary", "NSValue"] }

[profile.release]
opt-level = "z"
lto = true
strip = true
